--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-vte (1:0.16.14-0mh9unreleased) bora; urgency=low
+vte (1:0.16.14-0mh9) bora; urgency=low
 
   * Added gnome-pty-helper to debian/libvte4.files
 
